# Oxide_Chat

./: .gitignore  README.md  prompt.json
BACKEND/: .gitignore  Cargo.toml  Makefile  README.md  wrangler.toml
BACKEND/src/: lib.rs
CLI/: Cargo.toml  README.md
CLI/src/: main.rs
FRONTEND/: README.md  app.js  index.html  styles.css
FRONTEND/android/: .gitignore  README.md  settings.gradle
FRONTEND/android/app/: build.gradle  proguard-rules.pro
FRONTEND/android/app/src/main/: AndroidManifest.xml
FRONTEND/android/app/src/main/assets/: app.js  index.html  styles.css
FRONTEND/android/app/src/main/assets/assets/js/: firebase-config.js
FRONTEND/android/app/src/main/java/com/ojalkhatiwada/oxidechat/: MainActivity.kt
FRONTEND/android/app/src/main/res/values/: themes.xml
FRONTEND/web/: app.js  index.html  styles.css
