[package]
name = "oxide_chat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures-util = "0.3"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.5"
