[package]
name = "oxide_chat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures-util = "0.3"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
percent-encoding = "2.3"
